# JobGlove

./: .dockerignore  .env.example  .gitignore  Dockerfile  IMPLEMENTATION_STATUS.md  QUICKSTART.md  README.md  TESTING.md  TEST_RESULTS_SUMMARY.md  TODO  claude.md  docker-compose.yml  pyproject.toml  test_results.txt
backend/: app.py  config.py  pyproject.toml  pytest.ini  requirements.txt  run_tests.sh  setup_nltk.py  test_nlp_setup.py  wsgi.py
backend/database/: __init__.py  db.py  init_db.py
backend/routes/: health.py  resume.py
backend/services/: ai_service.py  ats_recommendations.py  document_parser.py  embedding_manager.py  latex_generator.py  review_service.py  scoring_service.py
backend/services/nlp/: __init__.py  entity_extractor.py  local_scorer.py  resume_parser.py  skill_extractor.py  text_analyzer.py
backend/templates/: resume_template.tex
backend/tests/: README.md  __init__.py  conftest.py  simple_test.py  test_ai_service_score_and_tailor.py  test_ats_recommendations.py  test_cosine_similarity.py  test_database.py  test_document_parser.py  test_experience_format_detection.py  test_gemini_section_fix.py  test_integration_full_flow.py  test_latex_generator.py  test_nlp_routes.py  test_review_service.py  test_routes.py  test_scoring_service.py  test_section_ordering.py  test_skills_preservation.py  test_tailor_routes.py  test_technical_skills_rendering.py
backend/tests/test_nlp/: __init__.py  test_nlp_integration.py
backend/utils/: logger.py
docs/: FRONTEND_IMPLEMENTATION_GUIDE.md  NLP_INTEGRATION_IMPLEMENTATION_PLAN.md  PHASE_6_CHANGES.md  groq-ollama-branch-summary.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/score/: CircularScore.tsx  KeywordBadges.tsx  Recommendations.tsx  ScoreBreakdown.tsx
frontend/src/components/tailor/: ResultsView.tsx  ScoreStep.tsx  StepIndicator.tsx  TailorForm.tsx  UploadStep.tsx
frontend/src/lib/: animations.ts  api.ts  utils.ts
frontend/src/lib/__tests__/: api.test.ts  utils.test.ts
frontend/src/pages/: Landing.tsx  NotFound.tsx  Tailor.tsx
frontend/src/pages/__tests__/: Landing.test.tsx  NotFound.test.tsx  (+2 more)
frontend/src/types/: api.ts  resume.ts  score.ts
frontend_old/: index.html  package.json  tailwind.config.js
frontend_old/css/: input.css  styles.css
frontend_old/js/: app.js
(+9 files in other folders)
